# Monitor-de-estufa-de-temperatura-pela-Internet

./: README.md
trabalho_temp_v1/: CMakeLists.txt
trabalho_temp_v1/main/: CMakeLists.txt  MQTTManager.cpp  MQTTManager.h  TempSensor.cpp  TempSensor.h  WiFiManager.cpp  WiFiManager.h  main.cpp
trabalho_temp_v2/: CMakeLists.txt
trabalho_temp_v2/main/: CMakeLists.txt  DS18B20.cpp  DS18B20.h  DS18B20Sensor.cpp  DS18B20Sensor.h  Digital.cpp  Digital.h  MQTTManager.cpp  MQTTManager.h  OneWire.cpp  OneWire.h  WiFiManager.cpp  WiFiManager.h  debug.h  delay.h  main.cpp
