idf_component_register(
    SRCS
        "main.cpp"
        "WiFiManager.cpp"
        "MQTTManager.cpp"
        "DS18B20Sensor.cpp"
        "DS18B20.cpp"
        "onewire.cpp"
        "digital.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        mqtt
        driver
)